--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <div>
                     <label for="player-input" class="text-lg text-gray-300 mb-2 block">
-                        Enter Player Name or Team (e.g., Patrick Mahomes or Chiefs):
+                        Enter Player Name or Team (e.g., Puka Nacua or Rams):
                     </label>
                     <input type="text"
                            id="player-input"
@@ -66,7 +66,7 @@
                         Select Football Week and Year for Analysis:
                     </label>
 
-                    <div class="grid grid-cols-2 gap-4">
+                    <!-- <div class="grid grid-cols-2 gap-4">
                         <div>
                             <label for="week-input" class="text-sm text-gray-400 mb-1 block">Week Number (1-18)</label>
                             <input type="number" id="week-input" name="analysis_week"
@@ -86,7 +86,7 @@
                                    class="w-full p-4 border border-gray-600 rounded-lg focus:ring-yellow-500 focus:border-yellow-500 bg-gray-700 text-white text-lg"
                                    required>
                         </div>
-                    </div>
+                    </div> -->
 
                     <p class="text-sm text-gray-400 mt-2">
                         *The NFL regular season runs roughly from Week 1 to Week 18.
